# mumhors

./: CMakeLists.txt  LICENSE  README.md  main.c
Optimizations/: row_threshold.m
misc/: backups.tar
misc/synchronization implementation/: backup2.c  backup3.c  backup4.c  last.c  verifier.c
src/: muhors.c  muhors.h  mumhors.c  mumhors.h
src/crypto/: hash.h  sha2.c
src/crypto/blake/: blake2b.c  blake2s.c
src/utils/: bitmap.c  bitmap.h  bits.c  bits.h  cqueue.c  cqueue.h  debug.c  debug.h  math.c  math.h  sort.c  sort.h
test/: main.c  seed  seed_file
test/hash/: hash_test.c
